# ResoSwitch

./: CMakeLists.txt  README.md  TrayAppWindow.cpp  TrayAppWindow.h  TrayMenu.cpp  _config.yml
.github/workflows/: ci.yml  jekyll-gh-pages.yml  release.yml
_includes/: head-custom-google-analytics.html
src/: About.cpp  About.h  About.rc  Autostart.cpp  Autostart.h  CMakeLists.txt  Config.cpp  Config.h  Hotkeys.cpp  Hotkeys.h  Resolution.cpp  Resolution.h  TrayAppWindow.cpp  TrayAppWindow.h  TrayIcon.cpp  TrayIcon.h  TrayMenu.cpp  TrayMenu.h  Version.cpp  Version.h  main.cpp  manifest.xml  resource.h  resource.rc
